--- a/test/fixtures/community_warnings.yml
+++ b/test/fixtures/community_warnings.yml
@@ -1,3 +1,18 @@
+# == Schema Information
+#
+# Table name: community_warnings
+#
+#  id           :integer          not null, primary key
+#  publish_time :datetime
+#  warning_type :string(255)
+#  level        :string(255)
+#  content      :text(65535)
+#  unit         :string(255)
+#  created_at   :datetime         not null
+#  updated_at   :datetime         not null
+#  status       :string(255)
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 # This model initially had no columns defined.  If you add columns to the
